k8s-gcp/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: api.k8s-multi-tier.com  # Replace with your domain or IP
      http:
        paths:
          - path: /items
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
